welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: type mismatch;
 found   : Unit
 required: String
      print("7:00")
           ^alarmClock:5: error: type mismatch;
 found   : Unit
 required: String
    }else{print("10:00")}
               ^alarmClock:8: error: type mismatch;
 found   : Unit
 required: String
      print("10:00")
           ^alarmClock:9: error: type mismatch;
 found   : Unit
 required: String
    }else{print("off")}
               ^